Updating the details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an engineer, interested in learning more about web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Virginia Beach, VA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Beer brewing, playing video games, and music.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Randolph, Richmond, VA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I do a bit of coding at my current job and it's my favorite thing. I'd like to get a bit deeper into it and if it could be my primary job, that would be excellent.</p>
     </section>
 
     <footer id="footer">
